--- a/less/navigation.less
+++ b/less/navigation.less
@@ -35,6 +35,7 @@
     width: 100%;
     margin: 0 auto;
     text-align: center;
+    position: fixed;
     
 
     h1{
